--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@material-ui/core": "^4.12.4",
     "babel-loader": "^10.0.0",
     "css-loader": "^7.1.2",
+    "dotenv": "^16.4.7",
     "file-loader": "^6.2.0",
     "graphql": "^16.10.0",
     "html-webpack-plugin": "^5.6.3",
@@ -27,5 +28,8 @@
     "webpack": "^5.98.0",
     "webpack-cli": "^6.0.1",
     "webpack-dev-server": "^5.2.0"
+  },
+  "devDependencies": {
+    "dotenv-webpack": "^8.1.0"
   }
 }
