--- a/package.json
+++ b/package.json
@@ -1,35 +1,29 @@
 {
-  "name": "staple-project",
+  "name": "staple-assignment",
   "version": "1.0.0",
-  "main": "index.js",
+  "description": "",
   "scripts": {
-    "start": "webpack serve --open --mode development",
-    "build": "webpack --mode production"
+    "dev": "vite",
+    "build": "vite build",
+    "preview": "vite preview"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
-  "description": "",
   "dependencies": {
-    "@apollo/client": "^3.6.2",
+    "@apollo/client": "^3.13.4",
     "@babel/core": "^7.26.10",
     "@babel/preset-env": "^7.26.9",
     "@babel/preset-react": "^7.26.3",
-    "@material-ui/core": "^4.12.4",
-    "babel-loader": "^10.0.0",
-    "css-loader": "^7.1.2",
-    "dotenv": "^16.4.7",
-    "file-loader": "^6.2.0",
+    "@emotion/react": "^11.14.0",
+    "@emotion/styled": "^11.14.0",
+    "@mui/material": "^6.4.7",
     "graphql": "^16.10.0",
-    "html-webpack-plugin": "^5.6.3",
-    "react": "^16.10.1",
-    "react-dom": "^16.10.1",
-    "style-loader": "^4.0.0",
-    "webpack": "^5.98.0",
-    "webpack-cli": "^6.0.1",
-    "webpack-dev-server": "^5.2.0"
+    "react": "^19.0.0",
+    "react-dom": "^19.0.0"
   },
   "devDependencies": {
-    "dotenv-webpack": "^8.1.0"
+    "@vitejs/plugin-react": "^4.3.4",
+    "vite": "^6.2.1"
   }
 }
